# bmws

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  Convergence.ipynb  Dockerfile  LCT_data_analyis.ipynb  LICENSE.txt  README.md  aadr_1240k_EUR_4500BP_1kg_meta.txt  betainc.py  betamix.py  bws.py  common.py  empirical bayes & em.ipynb  estimate.py  examples.ipynb  flsa.c  flsa.pyx  flsa.pyxbld  fusedlasso.py  gpu_vs_cpu.ipynb  hmm.py  infer.py  plot_scan.R  plotting.py  pyproject.toml  run_estimation.py  setup.cfg  sim.py  simulations.ipynb  test_beta.py  test_hmm.py  test_infer.py  test_misc.py
.github/workflows/: build_docker.yml
bmws/: __init__.py  betamix.py  cli.py  common.py  estimate.py  plotting.py  sim.py
data/: Britain_LCT.txt  Central_LCT.txt
paper/: LCT_data_analyis.ipynb  LCT_data_analyis.py  README.md  Simulate_Fig3.py  Simulate_S1.py  Simulate_S2.py  Simulate_S3.py  Simulate_S4.py  Supplemental_Code_S1.py  Supplemental_Code_S2.nb  simulations.ipynb
paper/data/: Iberia_LCT.txt  Italy_LCT.txt
paper/scripts/: plot_brit.R  plot_scan.R  scan_lib.R  test_poly.R
src/bmws/: __init__.py  cli.py  common.py
tests/: conftest.py  test_cli.py  test_infer.py  test_misc.py
