[metadata]
name = bmws
description = Beta-mixture with spikes model
author = Iain Mathieson <mathi@pennmedicine.upenn.edu> and Jonathan Terhorst <jonth@umich.edu>
license = GNU GPLv3+

[options]
packages = bmws
python_requires = >=3.9
install_requires =
    jax
    numpy
    scipy
    matplotlib
setup_requires = 
    setuptools
    setuptools_scm

[options.entry_points]
console_scripts = 
    bmws = bmws.cli:bmws_main
