[metadata]
name = bmws
description = Beta-mixture with spikes model
author = Iain Mathieson <mathi@pennmedicine.upenn.edu> and Jonathan Terhorst <jonth@umich.edu>
license = MIT
license_files = LICENSE.txt
url = https://github.com/jthlab/bmws

[options]
python_requires = >=3.9
install_requires =
    jax
    numpy
    scipy
    matplotlib
setup_requires =
    setuptools
    setuptools_scm

zip_safe = False
packages = find_namespace:
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src
exclude =
    tests

# Add here test requirements (semicolon/line-separated)
testing =
    setuptools
    pytest
    pytest-cov
    pytest-console-scripts

[options.entry_points]
console_scripts =
    bmws = bmws.cli:bmws_main

[tool:pytest]
# Specify command line options as you would do when invoking pytest directly.
# e.g. --cov-report html (or xml) for html/xml output or --junitxml junit.xml
# in order to write a coverage file that can be read by Jenkins.
# CAUTION: --cov flags may prohibit setting breakpoints while debugging.
#          Comment those flags to avoid this pytest issue.
addopts =
    --cov bmws --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
# Use pytest markers to select/deselect specific tests
# markers =
#     slow: mark tests as slow (deselect with '-m "not slow"')
#     system: mark end-to-end system tests

[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no_vcs = 1
formats = bdist_wheel

[flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 121
extend_ignore = E203, W503
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 4.5
package = bmws
extensions =
    no_skeleton

[autoflake]
check=true

[tool.isort]
profile = "black"
known_first_party = "bmws"
line_width = 120
